[refactor] 코드 컨벤션 통일 (#258)
* refactor(placeCourse): controller 코드 컨벤션 통일

- 좋아요한 장소 조회 ResponseEntity 도입

* fix: Builder 패턴 사용 시 초기값 무시 경고 해결

- MemberCourse, PlaceLike, Member 엔티티에 @Builder.Default 추가
- Lombok @Builder 사용 시 필드 초기값이 적용되도록 수정

* chore(placeVisit): 불필요한 줄 띄움 제거

* chore(placeVisit): 불필요한 @Setter 제거

* refactor: CourseReview 도메인 리팩토링

- @Setter 제거 및 비즈니스 메서드 추가
- Converter 제거 및 정적 팩토리 메서드로 대체
- DTO record화 및 inner class 분리
- QueryDSL 전용 DTO 분리 (query 패키지)
- 네이밍 통일 및 코드 컨벤션 개선

* refactor: PlaceReview 도메인 리팩토링

- @Setter 제거 및 비즈니스 메서드 추가
- Converter 제거 및 정적 팩토리 메서드로 대체
- DTO record화 및 inner class 분리
- 네이밍 통일 및 코드 컨벤션 개선

* refactor: 마이페이지 리뷰 조회 및 리뷰 신고 도메인 리팩토링

- Querydsl 전용 DTO(Class)와 응답용 DTO(Record) 분리
- transform 내 서브쿼리 제거 및 leftJoin 기반 쿼리 최적화로 런타임 에러 해결
- Projections.constructor 도입을 통한 불변 DTO 및 생성자 기반 매핑 적용
- Converter 클래스 삭제 및 Record 내 정적 팩토리 메서드(from, of) 도입
- 서비스 레이어 매핑 로직 개선 및 파일 구조(Flat DTO) 컨벤션 통일

* refactor: Group 도메인 리팩토링

- DTO record화 및 Response 빌더 패턴 제거
- 정적 팩토리 메서드(from, of) 도입 및 매핑 로직 이전
- 엔티티 생성 로직 캡슐화(create) 및 접근 제어자 수정
- 코드 컨벤션 통일 및 서비스 로직 가독성 개선

* refactor: Vote 도메인 리팩토링

- @Setter 제거 및 엔티티 내 비즈니스 메서드(create) 추가
- 응답 빌더 패턴 제거 및 정적 팩토리 메서드(of, from)로 대체
- DTO record화 및 목적별 패키지 구조/네이밍 최적화
- 특정 응답 전용 데이터를 Inner Record로 분리하여 응집도 향상
- 순위 계산 로직 등 불변성을 고려한 서비스 레이어 코드 개선

* refactor: Course 도메인 서비스 계층 빌더 패턴 리팩토링

- MemberCourse, PlaceCourse 엔티티 내 정적 팩토리 메서드(create) 도입
- 서비스 레이어(CourseCommandService, CourseService) 내 직접적인 빌더 호출 제거
- 엔티티 생성 로직을 도메인 내부로 캡슐화하여 서비스 코드 단순화 및 응집도 향상
- 기존 코드 스타일 및 비즈니스 로직 완전 유지

* refactor: CourseReview 도메인 리팩토링

- 응답 DTO(CourseReviewListResponse) record화 및 정적 팩토리 메서드(of) 도입

* refactor: Group 도메인 서비스 계층 내 빌더 패턴 제거

- joinGroupByInviteCode 메서드 내 MemberGroup 생성 로직을 정적 팩토리 메서드(create)로 변경
- 서비스 계층에 직접 노출된 엔티티 빌더를 캡슐화하여 코드 일관성 유지

* refactor: MemberCourse 도메인 리팩토링

- 응답 DTO(CourseBookmarkResponse) 내 정적 팩토리 메서드(of) 도입

* refactor: Boolean 래퍼 타입을 primitive boolean으로 변경

* refactor: PlaceVisit 도메인 리팩토링

- PlaceVisi